--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.opentracing.contrib</groupId>
     <artifactId>opentracing-mongo-driver</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>OpenTracing Instrumentation for Mongo Driver</description>
@@ -13,7 +13,7 @@
         <url>http://github.com/opentracing-contrib/java-mongo-driver</url>
         <connection>scm:git:https://github.com/opentracing-contrib/java-mongo-driver.git</connection>
         <developerConnection>scm:git:https://github.com/opentracing-contrib/java-mongo-driver.git</developerConnection>
-        <tag>0.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
