--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    Copyright 2017-2018 The OpenTracing Authors
+
+    Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+    in compliance with the License. You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software distributed under the License
+    is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+    or implied. See the License for the specific language governing permissions and limitations under
+    the License.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.opentracing.contrib</groupId>
@@ -8,6 +23,7 @@
   <name>${project.groupId}:${project.artifactId}</name>
   <description>OpenTracing Instrumentation for Mongo Driver</description>
   <url>https://github.com/opentracing-contrib/java-mongo-driver</url>
+  <inceptionYear>2017-2018</inceptionYear>
 
   <scm>
     <url>http://github.com/opentracing-contrib/java-mongo-driver</url>
@@ -43,8 +59,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
-    <opentracing.version>0.30.0</opentracing.version>
-    <mongo.driver.version>3.4.2</mongo.driver.version>
+    <opentracing.version>0.31.0</opentracing.version>
+    <mongo.driver.version>3.6.1</mongo.driver.version>
   </properties>
 
   <dependencies>
@@ -101,7 +117,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.7.0</version>
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
@@ -126,6 +142,32 @@
           <repo>maven</repo>
           <packageName>opentracing-mongo-driver</packageName>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>3.0</version>
+        <configuration>
+          <mapping>
+            <java>SLASHSTAR_STYLE</java>
+          </mapping>
+          <header>header.txt</header>
+          <strictCheck>true</strictCheck>
+          <excludes>
+            <exclude>LICENSE</exclude>
+            <exclude>mvnw</exclude>
+            <exclude>mvnw.cmd</exclude>
+            <exclude>.mvn/wrapper/maven-wrapper.properties</exclude>
+          </excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <phase>compile</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -164,7 +206,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.10.4</version>
+            <version>3.0.0</version>
             <configuration>
               <failOnError>false</failOnError>
             </configuration>
