--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,11 @@
       <artifactId>mongo-java-driver</artifactId>
       <version>${mongo.driver.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.19.0</version>
+    </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongodb-driver-async</artifactId>
