--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>2.19.0</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
