--- a/opentracing-mongo-driver/pom.xml
+++ b/opentracing-mongo-driver/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <artifactId>opentracing-mongo-parent</artifactId>
     <groupId>io.opentracing.contrib</groupId>
-    <version>0.1.1</version>
+    <version>0.1.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opentracing-mongo-driver</artifactId>
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>io.opentracing.contrib</groupId>
       <artifactId>opentracing-mongo-common</artifactId>
-      <version>0.1.1</version>
+      <version>0.1.2-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
