--- a/opentracing-mongo-common/pom.xml
+++ b/opentracing-mongo-common/pom.xml
@@ -29,6 +29,7 @@
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
       <version>${mongo.driver.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
