--- a/opentracing-mongo-driver-async/pom.xml
+++ b/opentracing-mongo-driver-async/pom.xml
@@ -31,11 +31,17 @@
       <artifactId>opentracing-mongo-common</artifactId>
       <version>0.1.5-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>${mongo.driver.version}</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongodb-driver-async</artifactId>
       <version>${mongo.driver.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
