--- a/opentracing-mongo-driver/pom.xml
+++ b/opentracing-mongo-driver/pom.xml
@@ -31,6 +31,12 @@
       <artifactId>opentracing-mongo-common</artifactId>
       <version>0.1.5-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>${mongo.driver.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
 </project>
