--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>opentracing-mongo-driver</module>
     <module>opentracing-mongo-common</module>
     <module>opentracing-mongo-driver-async</module>
+    <module>opentracing-mongo-driver-reactivestreams</module>
   </modules>
 
   <name>OpenTracing Instrumentation for Mongo Driver</name>
@@ -68,6 +69,7 @@
 
     <opentracing.version>0.33.0</opentracing.version>
     <mongo.driver.version>3.12.1</mongo.driver.version>
+    <mongo.driver.reactivestreams.version>1.13.1</mongo.driver.reactivestreams.version>
     <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
     <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
   </properties>
