--- a/opentracing-mongo-common/pom.xml
+++ b/opentracing-mongo-common/pom.xml
@@ -24,13 +24,19 @@
 
   <artifactId>opentracing-mongo-common</artifactId>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.mongodb</groupId>
-      <artifactId>mongo-java-driver</artifactId>
-      <version>${mongo.driver.version}</version>
-      <scope>provided</scope>
-    </dependency>
+  <dependencies> 
+      <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-core</artifactId>
+	    <version>${mongo.driver.version}</version>
+	    <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-legacy</artifactId>
+        <version>${mongo.driver.version}</version>
+        <scope>provided</scope>
+      </dependency>
   </dependencies>
 
 </project>
