--- a/opentracing-mongo-driver/pom.xml
+++ b/opentracing-mongo-driver/pom.xml
@@ -32,11 +32,24 @@
       <version>0.1.6-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.mongodb</groupId>
-      <artifactId>mongo-java-driver</artifactId>
-      <version>${mongo.driver.version}</version>
-      <scope>provided</scope>
-    </dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-sync</artifactId>
+        <version>${mongo.driver.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      
+            <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-core</artifactId>
+        <version>${mongo.driver.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-legacy</artifactId>
+        <version>${mongo.driver.version}</version>
+        <scope>provided</scope>
+      </dependency>
   </dependencies>
 
 </project>
