--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,11 @@
   <modules>
     <module>opentracing-mongo-driver</module>
     <module>opentracing-mongo-common</module>
-    <module>opentracing-mongo-driver-async</module>
-    <module>opentracing-mongo-driver-reactivestreams</module>
-  </modules>
+<!--     <module>opentracing-mongo-driver-async</module>
+ -->
+<!--      <module>opentracing-mongo-driver-reactivestreams</module>
+ -->  
+    </modules>
 
   <name>OpenTracing Instrumentation for Mongo Driver</name>
   <description>OpenTracing Instrumentation for Mongo Driver</description>
@@ -63,13 +65,14 @@
   </issueManagement>
 
   <properties>
-    <java.version>1.7</java.version>
+    <java.version>11</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
     <opentracing.version>0.33.0</opentracing.version>
-    <mongo.driver.version>3.12.1</mongo.driver.version>
-    <mongo.driver.reactivestreams.version>1.13.1</mongo.driver.reactivestreams.version>
+    <mongo.driver.version>4.0.5</mongo.driver.version>
+<!--     <mongo.driver.reactivestreams.version>1.13.1</mongo.driver.reactivestreams.version>
+ -->
     <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
     <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
   </properties>
@@ -178,7 +181,7 @@
       </plugin>
     </plugins>
   </build>
-
+<!-- 
   <distributionManagement>
     <repository>
       <id>bintray</id>
@@ -189,7 +192,7 @@
       <url>http://oss.jfrog.org/artifactory/oss-snapshot-local</url>
     </snapshotRepository>
   </distributionManagement>
-
+ -->
   <profiles>
     <profile>
       <id>release</id>
