chore: added faceit repo

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,16 @@
     </snapshotRepository>
   </distributionManagement>
  -->
+    <distributionManagement>
+        <repository>
+            <id>faceit-nexus-private-releases-repository</id>
+            <url>https://nexus.faceit-infra.com/repository/maven-releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>faceit-nexus-private-snapshots-repository</id>
+            <url>https://nexus.faceit-infra.com/repository/maven-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
   <profiles>
     <profile>
       <id>release</id>
