feat: mongodb driver 4.0

--- a/pom.xml
+++ b/pom.xml
@@ -19,16 +19,13 @@
   <groupId>io.opentracing.contrib</groupId>
   <artifactId>opentracing-mongo-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.1.6-SNAPSHOT</version>
+  <version>0.1.6-FACEIT-SNAPSHOT</version>
 
   <modules>
     <module>opentracing-mongo-driver</module>
     <module>opentracing-mongo-common</module>
-<!--     <module>opentracing-mongo-driver-async</module>
- -->
-<!--      <module>opentracing-mongo-driver-reactivestreams</module>
- -->  
-    </modules>
+    <module>opentracing-mongo-driver-reactivestreams</module>  
+  </modules>
 
   <name>OpenTracing Instrumentation for Mongo Driver</name>
   <description>OpenTracing Instrumentation for Mongo Driver</description>
@@ -71,8 +68,6 @@
 
     <opentracing.version>0.33.0</opentracing.version>
     <mongo.driver.version>4.0.5</mongo.driver.version>
-<!--     <mongo.driver.reactivestreams.version>1.13.1</mongo.driver.reactivestreams.version>
- -->
     <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
     <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
   </properties>
@@ -181,28 +176,6 @@
       </plugin>
     </plugins>
   </build>
-<!-- 
-  <distributionManagement>
-    <repository>
-      <id>bintray</id>
-      <url>https://api.bintray.com/maven/opentracing/maven/opentracing-mongo-driver/;publish=1</url>
-    </repository>
-    <snapshotRepository>
-      <id>jfrog-snapshots</id>
-      <url>http://oss.jfrog.org/artifactory/oss-snapshot-local</url>
-    </snapshotRepository>
-  </distributionManagement>
- -->
-    <distributionManagement>
-        <repository>
-            <id>faceit-nexus-private-releases-repository</id>
-            <url>https://nexus.faceit-infra.com/repository/maven-releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>faceit-nexus-private-snapshots-repository</id>
-            <url>https://nexus.faceit-infra.com/repository/maven-snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
   <profiles>
     <profile>
       <id>release</id>
