--- a/opentracing-mongo-common/pom.xml
+++ b/opentracing-mongo-common/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <artifactId>opentracing-mongo-parent</artifactId>
     <groupId>io.opentracing.contrib</groupId>
-    <version>0.1.6-SNAPSHOT</version>
+    <version>0.1.6-FACEIT-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -30,12 +30,6 @@
         <artifactId>mongodb-driver-core</artifactId>
 	    <version>${mongo.driver.version}</version>
 	    <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver-legacy</artifactId>
-        <version>${mongo.driver.version}</version>
-        <scope>provided</scope>
       </dependency>
   </dependencies>
 
