--- a/opentracing-mongo-driver/pom.xml
+++ b/opentracing-mongo-driver/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <artifactId>opentracing-mongo-parent</artifactId>
     <groupId>io.opentracing.contrib</groupId>
-    <version>0.1.6-SNAPSHOT</version>
+    <version>0.1.6-FACEIT-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opentracing-mongo-driver</artifactId>
@@ -29,27 +29,14 @@
     <dependency>
       <groupId>io.opentracing.contrib</groupId>
       <artifactId>opentracing-mongo-common</artifactId>
-      <version>0.1.6-SNAPSHOT</version>
+      <version>0.1.6-FACEIT-SNAPSHOT</version>
     </dependency>
     <dependency>
         <groupId>org.mongodb</groupId>
         <artifactId>mongodb-driver-sync</artifactId>
         <version>${mongo.driver.version}</version>
         <scope>provided</scope>
-      </dependency>
-      
-            <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver-core</artifactId>
-        <version>${mongo.driver.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver-legacy</artifactId>
-        <version>${mongo.driver.version}</version>
-        <scope>provided</scope>
-      </dependency>
+      </dependency> 
   </dependencies>
 
 </project>
